unpackaged/main/default/objects/Credit_Model_Rule__mdt/Credit_Model_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Credit Model Rule</label>
    <pluralLabel>Credit Model Rules</pluralLabel>
</CustomObject>