unpackaged/main/default/objects/Credit_Model_Rule__mdt/fields/Auto_Decline__c.field-meta.xml
<CustomField>
    <fullName>Auto_Decline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will decline the deal with matching Model Grade and Deal Origination regardless of the model recommendation</description>
    <label>Auto Decline</label>
    <type>Checkbox</type>
</CustomField>