unpackaged/main/default/objects/Credit_Model_Rule__mdt/fields/Credit_Model_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Model_Decline_Reason__c</fullName>
    <inlineHelpText>Must align with a Credit Review decline reason</inlineHelpText>
    <label>Credit Model Decline Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>